# VK.Education

./: .gitignore  README.md  Readme.md  command.cpp  command.h  filter.sh  in.txt  main.cpp  string_manip.h  table.h
.github/workflows/: c-cpp.yml
0. Interview/: Makefile  README.md  command.h  main.cpp  table.h
1. Process/: CMakeLists.txt  Makefile  README.md  errlog.txt  main.cpp  ostype.hpp  pipe2.hpp  pipe2_macos.cpp  process.cpp  process.hpp  test.cpp  test.h
2. Logger/: CMakeLists.txt  Makefile  README.md  base.cpp  base.hpp  file.cpp  file.hpp  log_utils.cpp  log_utils.hpp  logger.cpp  logger.hpp  main.cpp  stdstream.cpp  stdstream.hpp  test.cpp  tools.cpp  tools.hpp
2. Logger/inc/: base.hpp  file.hpp  log_utils.hpp  logger.hpp  stderr.hpp  stdout.hpp  tools.hpp
2. Logger/lib/: CMakeLists.txt  base.cpp  file.cpp  log_utils.cpp  logger.cpp  stderr.cpp  stdout.cpp  tools.cpp
2. Logger/lib/src/: base.cpp  file.cpp  log_utils.cpp  logger.cpp  stderr.cpp  stdout.cpp
2. Logger/src/: test.cpp
3. TCP Server/: CMakeLists.txt  README.md  proto-client.c  proto-server.c
3. TCP Server/inc/: address.hpp  connection.hpp  descriptor.hpp  exceptions.hpp  server.hpp  socket.hpp
3. TCP Server/lib/: CMakeLists.txt  address.cpp  connection.cpp  descriptor.cpp  exceptions.cpp  server.cpp  socket.cpp
3. TCP Server/src/: test-client.cpp  test-server.cpp
3. TCP Server/tests/: test-client.cpp  test-server-working.cpp  test-server.cpp
4. Shared Memory/: CMakeLists.txt
4. Shared Memory/example/: allocator-usage.cpp
4. Shared Memory/inc/: allocator.hpp  exceptions.hpp  map.hpp  mmap_wrapper.hpp  semaphore.hpp  semlock.hpp
4. Shared Memory/lib/: CMakeLists.txt  allocator.cpp  exceptions.cpp  map.cpp  semaphore.cpp  semlock.cpp
5. Epoll Services/: CMakeLists.txt
5. Epoll Services/inc/: buff_conn.hpp  epoll.hpp  listener.hpp  service.hpp
5. Epoll Services/lib/: CMakeLists.txt
5. Epoll Services/lib/dep/inc/: connection.hpp
5. Epoll Services/lib/dep/lib/: CMakeLists.txt  descriptor.cpp
Data/: script.sh
